Fixed OKRList not hiding collapsed KRs.

--- a/skrum_frontend/src/project/OKR/OKRList/OKRBar.css
+++ b/skrum_frontend/src/project/OKR/OKRList/OKRBar.css
@@ -1,5 +1,5 @@
 .component {
-  /*overflow: hidden;*/
+  overflow: hidden;
   font-size: small;
   margin: 1px auto 0 auto;
   padding: 5px 40px;
